--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,4 +29,4 @@ jobs:
       run: |
         python manage.py test
       env:
-        WHITELIST_ONE: 'http://127.0.0.1:5173'
+        WHITELIST_ONE: ''
