--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==4.1.0
 django-environ==0.10.0
 djangorestframework==3.14.0
 Pillow==9.5.0
+psycopg2==2.9.7
 pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.6.1
