--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==4.2.1
 django-cors-headers==4.1.0
 django-environ==0.10.0
 djangorestframework==3.14.0
+gunicorn==21.2.0
+packaging==23.1
 Pillow==9.5.0
 psycopg2==2.9.7
 pytz==2023.3
