--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ Django==4.2.1
 django-cors-headers==4.1.0
 django-environ==0.10.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 gunicorn==21.2.0
 packaging==23.1
 Pillow==9.5.0
 psycopg2==2.9.7
+PyJWT==2.8.0
 pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.6.1
